--- a/app/src/main/res/layout/activity_recover_account.xml
+++ b/app/src/main/res/layout/activity_recover_account.xml
@@ -85,7 +85,7 @@ pueda actualizar su información."
                     android:id="@+id/imageView2"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/icono_mail"
+                    app:srcCompat="@drawable/icono_mail"
                     android:layout_gravity="center"
                     android:tint="#888585"
                     android:layout_weight="1"
