--- a/app/src/main/res/drawable-v24/bg_border_completo.xml
+++ b/app/src/main/res/drawable-v24/bg_border_completo.xml
@@ -1,20 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent" />
-
-            <corners
-                android:bottomLeftRadius="10dp"
-                android:bottomRightRadius="10dp"
-                />
-
+            <corners android:radius="10dp" />
             <stroke
                 android:width="1dp"
-                android:color="#9F888585"
+                android:color="#615f5f"
                 >
             </stroke>
         </shape>
     </item>
 </selector>
-
