--- a/app/src/main/res/drawable-v24/bg_horizontal_left_border_azuleable.xml
+++ b/app/src/main/res/drawable-v24/bg_horizontal_left_border_azuleable.xml
@@ -2,16 +2,16 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="#0089BA" />
 
             <corners
+                android:topLeftRadius="10dp"
                 android:bottomLeftRadius="10dp"
-                android:bottomRightRadius="10dp"
                 />
 
             <stroke
-                android:width="1dp"
-                android:color="#9F888585"
+                android:width="0sp"
+                android:color="#0089BA"
                 >
             </stroke>
         </shape>
