--- a/app/src/main/res/drawable/bg_horizontal_right_border.xml
+++ b/app/src/main/res/drawable/bg_horizontal_right_border.xml
@@ -2,16 +2,17 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@android:color/transparent" />
+            <solid android:color="#0089BA" />
 
             <corners
-                android:bottomLeftRadius="10dp"
+                android:topRightRadius="10dp"
                 android:bottomRightRadius="10dp"
+
                 />
 
             <stroke
-                android:width="1dp"
-                android:color="#9F888585"
+                android:width="0sp"
+                android:color="#0089BA"
                 >
             </stroke>
         </shape>
