--- a/app/src/main/res/layout/activity_ordernar.xml
+++ b/app/src/main/res/layout/activity_ordernar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrdernarActivity">
+    tools:context=".view.Implement.OrdernarActivity">
 
     <!--<LinearLayout
         android:layout_width="match_parent"
