--- a/app/src/main/res/layout/item_carrito.xml
+++ b/app/src/main/res/layout/item_carrito.xml
@@ -14,6 +14,7 @@
 
         >
 
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -22,43 +23,63 @@
                 android:background="@drawable/bg_border_total_blanco"
                 >
 
+                <Button
+                    android:id="@+id/btnEliminar"
+                    android:layout_marginTop="0dp"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+
+                    android:layout_marginRight="15dp"
+                    android:layout_alignParentRight="true"
+                    android:drawableTop="@drawable/ic_cerrar"
+                    android:drawableTint="#da6469 "
+                    android:textColor="#fff"
+                    android:background="#fff"
+                    />
+
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/imageView"
                     android:gravity="center"
-                    android:layout_marginTop="7dp"
+
                     android:layout_marginBottom="10dp"
                     android:layout_width="120dp"
                     android:layout_height="100dp"
                     android:src="@drawable/leche_template"
                     app:civ_border_width="0dp"
                     app:civ_border_color="#0933BA"
-                    android:layout_alignParentTop="true"
+                    android:layout_below="@+id/btnEliminar"
+
                     android:layout_alignParentLeft="true"
                     />
 
                 <TextView
                     android:layout_marginTop="7dp"
                     android:id="@+id/textViewTitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15sp"
                     android:layout_toRightOf="@id/imageView"
-                    android:text="Arroz Integral Metro Bolsa 750 g"
+                    android:layout_below="@+id/btnEliminar"
+                    android:text="Arroz Integral Metro Bolsa 750 gassssssssssssssssssssss"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                     android:textColor="#6aa568"
                     android:textStyle="bold"
+                    android:textSize="15sp"
                     />
 
                 <TextView
                     android:id="@+id/textViewShortDesc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="29dp"
                     android:layout_below="@id/textViewTitle"
                     android:layout_marginLeft="5dp"
+                    android:layout_marginRight="15sp"
                     android:layout_marginTop="5dp"
                     android:layout_toRightOf="@id/imageView"
-                    android:text="Rompe Olla"
+                    android:text="Pelientes efficture sed loreasassssssssssssssssssn quist volutap. Mauris enim..."
                     android:textColor="#8e8f8f"
+                    android:textSize="10sp"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Small" />
 
                 <TextView
@@ -66,7 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                      android:layout_marginBottom="15dp"
-                    android:layout_above="@+id/btnEliminar"
+                    android:layout_below="@+id/textViewShortDesc"
 
                     android:layout_marginLeft="5dp"
                     android:layout_marginTop="5dp"
@@ -85,55 +106,44 @@
 
                     <Button
                         android:id="@+id/btnRestar"
-                        android:layout_marginTop="0dp"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_below="@id/imageView"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_toRightOf="@id/imageView"
+                        android:layout_below="@+id/textViewShortDesc"
+                        android:layout_marginLeft="5dp"
                         android:text="-"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="#fff"
                         android:background="@drawable/bg_horizontal_left_border_azuleable"
 
                         />
                     <Button
                         android:id="@+id/btnCantidad"
-                        android:layout_marginTop="0dp"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_below="@id/imageView"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_below="@+id/textViewShortDesc"
                         android:layout_toRightOf="@id/btnRestar"
                         android:text="1"
-                        android:textSize="14sp"
+                        android:textSize="12sp"
                         android:textColor="#7f8282"
                         android:background="@drawable/bg_horizontal_medium_border"
                         />
                     <Button
                         android:id="@+id/btnSumar"
-                        android:layout_marginTop="0dp"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_below="@id/imageView"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_below="@+id/textViewShortDesc"
                         android:layout_toRightOf="@id/btnCantidad"
                         android:text="+"
-                        android:textSize="16sp"
+                        android:textSize="14sp"
                         android:textColor="#fff"
                         android:background="@drawable/bg_horizontal_right_border"
                         />
 
-                <Button
-                    android:id="@+id/btnEliminar"
-                    android:layout_marginTop="0dp"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:layout_below="@id/imageView"
-                    android:layout_marginRight="15dp"
-                    android:layout_alignParentRight="true"
-                    android:drawableTop="@drawable/ic_eliminar"
-                    android:drawableTint="#da6469 "
-                    android:textColor="#fff"
-                    android:background="#fff"
-                    />
+
 
             </RelativeLayout>
 
