--- a/app/src/main/res/layout/activity_detalle_tienda.xml
+++ b/app/src/main/res/layout/activity_detalle_tienda.xml
@@ -6,23 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".DetalleTiendaActivity">
 
-
+    <ImageButton
+        android:id="@+id/btn_volver"
+        android:layout_marginLeft="5dp"
+        android:layout_width="45dp"
+        android:layout_height="60dp"
+        android:background="@drawable/ic_izquierda"
+        android:backgroundTint="#0089BA"
+        />
 
     <RelativeLayout
         android:id="@+id/body_1"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/btn_volver"
         android:background="#0089BA"
         >
 
-        <ImageButton
-            android:layout_marginLeft="5dp"
-            android:layout_width="45dp"
-            android:layout_height="60dp"
-            android:background="@drawable/ic_izquierda"
-            android:backgroundTint="#fff"
-            />
+
 
 
         <ImageView
@@ -70,6 +71,90 @@
             />
     </RelativeLayout>
 
+
+    <RelativeLayout
+        android:id="@+id/rl_telefono"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:layout_margin="8dp"
+        android:layout_below="@+id/body_2"
+        android:background="@drawable/bg_border_total_blanco"
+        >
+
+
+
+        <ImageView
+            android:padding="4dp"
+            android:id="@+id/imageView"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_telefono"
+            android:layout_gravity="center"
+            android:tint="#7B7D7D"
+            />
+
+
+
+
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:id="@+id/tvTienda"
+            android:layout_width="match_parent"
+            android:layout_height="20dp"
+            android:textStyle="bold"
+            android:text="+998 525 632"
+            android:layout_toRightOf="@id/imageView"
+            android:layout_toLeftOf="@+id/imageVer"
+            android:gravity="center_vertical"
+            />
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:id="@+id/tvEstadoPedido"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:textSize="14sp"
+            android:text="Movil"
+            android:layout_toRightOf="@id/imageView"
+            android:layout_below="@+id/tvTienda"
+            android:gravity="center_vertical"
+            />
+
+
+
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/tvTitulo"
+        android:paddingLeft="20dp"
+        android:gravity="center_vertical"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="OFERTAS"
+        android:layout_below="@+id/rl_telefono"
+        android:textColor="#0089BA"
+        />
+
+    <RelativeLayout
+        android:id="@+id/rd_body_4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tvTitulo"
+        >
+
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            android:overScrollMode="never"
+            ></android.support.v7.widget.RecyclerView>
+
+
+    </RelativeLayout>
 
 
 </RelativeLayout>
