--- a/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
+++ b/app/src/main/res/layout/activity_lista_tiendas_cercanas.xml
@@ -9,7 +9,7 @@
 
     <!-- HEADER MENU-->
     <RelativeLayout
-        android:id="@+id/footer"
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -37,145 +37,142 @@
 
     <!-- BODY -->
     <RelativeLayout
-        android:layout_marginTop="60dp"
+
         android:id="@+id/boody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/header"
+
         android:gravity="center" >
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvTitulo"
+            android:paddingLeft="20dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="TIENDA SELECCIONADA"
+            android:textColor="#0089BA"
+            />
+        <ImageView
+            android:layout_marginRight="10dp"
+            android:padding="9dp"
+            android:id="@+id/imageVerd"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_refrescar"
+            android:layout_gravity="center"
+            android:tint="#17A589"
+
+            android:layout_alignParentRight="true"
+            />
+
+        <!--TIENDA SELECCIONADA-->
+        <RelativeLayout
+            android:id="@+id/body_3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
+            android:padding="8dp"
+            android:layout_margin="8dp"
+            android:layout_below="@+id/tvTitulo"
+            android:background="@drawable/bg_border_total_blanco"
             >
 
-            <TextView
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TIENDA SELECCIONADA"
-                android:textColor="#0089BA"
+
+
+            <ImageView
+                android:padding="10dp"
+                android:id="@+id/imageView"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_market"
+                android:layout_gravity="center"
+                android:tint="#F4F6F7 "
+                android:background="#7B7D7D"
                 />
 
-            <!-- TIENDAR SELECCIONADA -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:background="#F2EEEE"
-                >
-                <TextView
-                    android:layout_weight="0.9"
-                    android:paddingLeft="20dp"
-                    android:textAllCaps="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tienda 1"
-                    android:textColor="#797D7F"
-                    />
-                <ImageButton
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="20dp"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/ic_derecha"
-                    android:backgroundTint="#0089BA"
-                    />
-            </LinearLayout>
-
-            <TextView
-                android:paddingLeft="20dp"
-                android:paddingTop="20dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="TIENDAS DISPONIBLES"
-                android:textColor="#0089BA"
+            <ImageView
+                android:padding="7dp"
+                android:id="@+id/imageTienda"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_market"
+                android:tint="#888585"
+                android:layout_toRightOf="@id/imageView"
+                />
+            <ImageView
+                android:padding="5dp"
+                android:id="@+id/imageViewUbicacion"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_ubicacion"
+                android:tint="#17A589 "
+                android:layout_toRightOf="@id/imageView"
+                android:layout_below="@+id/imageTienda"
                 />
 
-            <!-- LISTA DE TIENDAS CERCANAS -->
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvTienda"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="30dp"
+                android:textStyle="bold"
+                android:text="Tienda Pepido"
+                android:layout_toRightOf="@id/imageTienda"
+                android:layout_toLeftOf="@+id/imageVer"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:background="#F2EEEE"
-                >
-                <TextView
-                    android:layout_weight="0.9"
-                    android:paddingLeft="20dp"
-                    android:textAllCaps="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tienda 2"
-                    android:textColor="#797D7F"
-                    />
-                <ImageButton
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="20dp"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/ic_derecha"
-                    android:backgroundTint="#0089BA"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:id="@+id/tvEstadoPedido"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:textSize="12sp"
+                android:text="A 2KM"
+                android:layout_toRightOf="@id/imageTienda"
+                android:layout_below="@+id/tvTienda"
                 android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:background="#F2EEEE"
-                >
-                <TextView
-                    android:layout_weight="0.9"
-                    android:paddingLeft="20dp"
-                    android:textAllCaps="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tienda 2"
-                    android:textColor="#797D7F"
-                    />
-                <ImageButton
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="20dp"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/ic_derecha"
-                    android:backgroundTint="#0089BA"
-                    />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:background="#F2EEEE"
-                >
-                <TextView
-                    android:layout_weight="0.9"
-                    android:paddingLeft="20dp"
-                    android:textAllCaps="false"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Tienda 3"
-                    android:textColor="#797D7F"
-                    />
-                <ImageButton
-                    android:layout_weight="0.1"
-                    android:layout_marginRight="20dp"
-                    android:layout_width="45dp"
-                    android:layout_height="50dp"
-                    android:background="@drawable/ic_derecha"
-                    android:backgroundTint="#0089BA"
-                    />
-            </LinearLayout>
+                />
 
 
-        </LinearLayout>
+            <ImageView
+                android:padding="0dp"
+                android:id="@+id/imageVer"
+                android:layout_width="40dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_derecha"
+                android:layout_gravity="center"
+                android:tint="#17A589"
+
+                android:layout_alignParentRight="true"
+                />
+
+        </RelativeLayout>
+
+
+        <!--LISTA TIENDAS-->
+        <TextView
+            android:id="@+id/tvTitulo2"
+            android:paddingLeft="20dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:text="TIENDA SELECCIONADA"
+            android:textColor="#0089BA"
+            android:layout_below="@+id/body_3"
+            />
+
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_below="@+id/tvTitulo2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="10dp"
+            android:overScrollMode="never"
+            ></android.support.v7.widget.RecyclerView>
+
+
 
     </RelativeLayout>
 
